# backend/api/src/public/docs/openapi.yaml
@@ -26,7 +26,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SuccessAuthResource'
+                $ref: '#/components/schemas/SuccessLoginResource'
         '401':
           description: 'Unauthorized attempt to get access'
           content:
@@ -35,6 +35,14 @@ paths:
                 properties:
                   status: { type: string, example: failure }
                   message: { type: string, example: Unauthorized }
+                type: object
+        '422':
+          description: 'Validation errors occurred'
+          content:
+            application/json:
+              schema:
+                properties:
+                  errors: { properties: { email: { type: array, items: { type: string, example: 'The email has already been taken.' } }, password: { type: array, items: { type: string, example: 'The password field is required.' } } }, type: object }
                 type: object
         '500':
           description: 'Some internal server error occurred'
@@ -130,7 +138,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SuccessAuthResource'
+                $ref: '#/components/schemas/SuccessRegisterResource'
         '400':
           description: "The passwords don't match"
           content:
@@ -139,6 +147,68 @@ paths:
                 properties:
                   status: { type: string, example: failure }
                   message: { type: string, example: "The passwords don't match" }
+                type: object
+        '401':
+          description: 'Something went wrong while creating token for user'
+          content:
+            application/json:
+              schema:
+                properties:
+                  status: { type: string, example: failure }
+                  message: { type: string, example: 'Something went wrong while creating token for user' }
+                type: object
+        '422':
+          description: 'Validation errors occurred'
+          content:
+            application/json:
+              schema:
+                properties:
+                  errors: { properties: { first_name: { type: array, items: { type: string, example: 'The first name field is required.' } }, last_name: { type: array, items: { type: string, example: 'The last name field is required.' } }, email: { type: array, items: { type: string, example: 'The email has already been taken.' } }, username: { type: array, items: { type: string, example: 'The username has already been taken.' } }, password: { type: array, items: { type: string, example: 'The password field is required.' } }, password_confirmation: { type: array, items: { type: string, example: 'The password confirmation field is required.' } } }, type: object }
+                type: object
+        '500':
+          description: 'Some internal server error occurred'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerErrorResource'
+  /api/profile/avatar:
+    post:
+      tags:
+        - profile
+      summary: "Upload user's avatar"
+      operationId: api.profile.avatar
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UploadUserAvatarRequest'
+      responses:
+        '200':
+          description: "Uploading of user's avatar went successfully"
+          content:
+            application/json:
+              schema:
+                properties:
+                  status: { type: string, example: success }
+                  message: { type: string, example: 'Avatar was uploaded successfully' }
+                type: object
+        '401':
+          description: 'Unauthorized attempt to get access'
+          content:
+            application/json:
+              schema:
+                properties:
+                  status: { type: string, example: failure }
+                  message: { type: string, example: Unauthorized }
+                type: object
+        '422':
+          description: 'Validation errors occurred'
+          content:
+            application/json:
+              schema:
+                properties:
+                  errors: { properties: { avatar: { type: array, items: { type: string, example: 'The avatar field is required.' } } }, type: object }
                 type: object
         '500':
           description: 'Some internal server error occurred'
@@ -208,6 +278,15 @@ components:
           type: string
           example: '123456'
       type: object
+    UploadUserAvatarRequest:
+      required:
+        - avatar
+      properties:
+        avatar:
+          description: 'The avatar image file to upload.'
+          type: string
+          format: binary
+      type: object
     SuccessAuthResource:
       properties:
         status:
@@ -216,6 +295,39 @@ components:
         message:
           type: string
           example: '"Registration was successful" or "User logged in successfully"'
+        user:
+          $ref: '#/components/schemas/User'
+        authorization:
+          $ref: '#/components/schemas/TokenResource'
+      type: object
+    SuccessLoginResource:
+      properties:
+        status:
+          type: string
+          example: success
+        message:
+          type: string
+          example: 'User logged in successfully'
+        user:
+          $ref: '#/components/schemas/User'
+        avatars:
+          description: "Array of user's avatars. Original version of avatar can be null and also of various extension"
+          example:
+            - 'http://localhost/storage/avatars/1/large.webp'
+            - 'http://localhost/storage/avatars/1/medium.webp'
+            - 'http://localhost/storage/avatars/1/small.webp'
+            - 'http://localhost/storage/avatars/1/original.jpg'
+        authorization:
+          $ref: '#/components/schemas/TokenResource'
+      type: object
+    SuccessRegisterResource:
+      properties:
+        status:
+          type: string
+          example: success
+        message:
+          type: string
+          example: 'Registration was successful'
         user:
           $ref: '#/components/schemas/User'
         authorization:
